add content to home page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,25 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Vivian's Blog</title>
+  </head>
   <body>
-    <h1>blogge</h1>
-    <p>UNDER CONSTRUCTION</p>
+    <div id="Title">
+      <h1>
+        <center>
+          Vivian's Project Blog
+          <p>UNDER CONSTRUCTION</p>
+        </center>
+      </h1>
+    </div>
+    
+    <div>
+      <h5><strong>Currently Blogging:</strong> Gamified Task Manager</h5>
+    </div>
+
+    <div>
+      <p>For more about me and my projects, visit my website: <a href="vivan-pou.com">vivian-pou.com</a></p>
+    </div>
+    
   </body>
 </html>
