--- a/index.html
+++ b/index.html
@@ -5,12 +5,8 @@
   </head>
   <body>
     <div id="Title">
-      <h1>
-        <center>
-          Vivian's Project Blog
-          <p>UNDER CONSTRUCTION</p>
-        </center>
-      </h1>
+      <h1>Vivian's Project Blog</h1>
+      <p>UNDER CONSTRUCTION</p>
     </div>
     
     <div>
