--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     </div>
     
     <div>
-      <h5><strong>Currently Blogging:</strong> Gamified Task Manager</h5>
+      <h3><strong>Currently Blogging:</strong> Gamified Task Manager</h3>
     </div>
 
     <div>
-      <p>For more about me and my projects, visit my website: <a href="vivan-pou.com">vivian-pou.com</a></p>
+      <p>For more about me and my projects, visit my website: <a href="http://vivan-pou.com">vivian-pou.com</a></p>
     </div>
     
   </body>
