link attempt fix

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <div>
-      <p>For more about me and my projects, visit my website: <a href="http://vivian-pou.com/">http://vivian-pou.com</a></p>
+      <p>For more about me and my projects, visit my website: <a href="http://vivian-pou.com/" target="_blank">vivian-pou.com</a></p>
     </div>
     
   </body>
