attempt image fic

--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <title>Vivian's Site</title>
   </head>
   <body>
+    <header>
+      <h1>Vivian's Site</h1>
+    </header>
 
     <div id="text">
       <h1>:)</h1>
       <h2>Learning <em>HTML</em> and <em>CSS</em></h2>
       <h2><strong>Web Dev</strong> Test site</h2>
-      <p>UNDER CONSTRUCTION</p>
     </div>
 
     <div id="image">
-      <img src= images/headshot2.png alt="Headshot">
+      <img src= raspberrie.jpg alt="raspberries">
     </div>
     
   
