--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   </head>
   <body>
     <header>
-      <h1>Vivian's Site</h1>
+      <h1>Vivian's Blog</h1>
     </header>
 
     <div id="text">
       <h1>:)</h1>
-      <h2>Learning <em>HTML</em> and <em>CSS</em></h2>
+      <h2>Learning <em>HTML</em></h2>
       <h2><strong>Web Dev</strong> Test site</h2>
     </div>
 
