--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Vivian's Site</title>
+    <title>Vivian's Blog</title>
   </head>
   <body>
     <header>
-      <h1>Vivian's Site</h1>
+      <h1>Vivian's Blog</h1>
+      <h2>Sustainable Claremont</h2>
     </header>
 
-    <div id="text">
-      <h1>:)</h1>
-      <h2>Learning <em>HTML</em></h2>
-      <h2><strong>Web Dev</strong> Test site</h2>
+    <div id="posts">
+      <p><strong>JUNE 10, 2019</strong></p>
+      <p><strong>Monday</strong></p>
+      <p><strong>Joining the Team</strong></p>
+      <p>
+        Today was my first day on the Green Crew Research Team! The first hour or so was spent talking to Christina, Reymond, and Prof. Medero about what the team had accomplished in the first couple of weeks and what was left to work on. The rest of the morning and the early part of the afternoon was spent learning about Google App Script by working with a toy example and following online tutorials until I felt relatively comfortable working in the language. From there I read the Protocol for Future Developers documents from the team drive in order to familiarize myself with what had already been accomplished and what still needed work. I decided it would be best for me to start looking at the code for Tree Benefit Analysis as it seemed that much of the work regarding the messaging system was nearly complete (although I spent a little bit of time seeing if we could link the original text to translated messages in case the google translations didn’t make sense, but this did not result in anything concrete). After looking through the notes and the code, it seemed like one of the main problems was run time in gathering data for individual trees. Thus, I tried to comb through the existing code to see if there were any places that run time could be improved. Toward the end of the work day we decided to try turning the ~700 lines of if-statements into a dictionary, so I spent the remainder of the work day beginning to convert these if-statements into a dictionary.
+      </p>
+      <p>
+        Tomorrow I will finish turning the if statements into dictionaries for tree names, distances, and direction as well as making sure my new implementation doesn’t introduce more errors. I plan to also look through more of the code to see if there are other steps that can be taken to improve the runtime so that users don’t have to split the calculation into chunks of rows. There also seemed to be an unresolved error with getting individual tree benefits on a yearly basis.
+      </p>
     </div>
 
     <div id="image">
