--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <head>
     <!-- CSS Style Sheet link -->
     <link href="./style.css" type="text/css" rel="stylesheet">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no">
 
     <!-- Title -->
     <title>Vivian's Blog</title>
@@ -23,7 +26,7 @@
 
   <body>
     <div class="content">
-      
+
         <!-- Welcome Text -->
       <div id="main-title"></div>
       <h1>Vivian's Project Blog</h1>
