--- a/index.html
+++ b/index.html
@@ -15,17 +15,13 @@
   <body>
     <!-- Menu Navigation -->
     <nav>
-        <ul>
-            <li><a href="./index.html">Blog Home</a></li>
-            <li><a href="./gamified.html">Gamified Task Manager</a></li>
-            <li><a href="./fidelity.html">Fidtern</a></li>
-            <li><a href="./greencrew.html">Sustainable Claremont</a></li>
-            <li><a href="./about.html">Blog Details</a></li>
-        </ul>
+      <a href="./index.html">Blog Home</a></li>
+      <a href="./gamified.html">Gamified Task Manager</a></li>
+      <a href="./fidelity.html">Fidtern</a></li>
+      <a href="./greencrew.html">Sustainable Claremont</a></li>
     </nav>
 
-  <body>
-    <div class="content">
+    <div class="main">
 
         <!-- Welcome Text -->
       <div id="main-title"></div>
