--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
   <body>
     <!-- Menu Navigation -->
-    <nav>
+    <div class="nav">
       <a href="./index.html">Blog Home</a></li>
       <a href="./gamified.html">Gamified Task Manager</a></li>
       <a href="./fidelity.html">Fidtern</a></li>
       <a href="./greencrew.html">Sustainable Claremont</a></li>
-    </nav>
+    </div>
 
     <div class="main">
 
@@ -27,7 +27,6 @@
       <div id="main-title"></div>
       <h1>Vivian's Project Blog</h1>
       <p>This site documents longer non-academic projects</p>
-      <p>UNDER CONSTRUCTION</p>
       
       <!-- Status Box -->
       <div id="status">
