--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <body>
     <!-- Menu Navigation -->
     <div class="nav">
-      <a href="./index.html">Blog Home</a></li>
+      <div id="current">
+        <a href="./index.html">Blog Home</a></li>
+      </div>
       <a href="./gamified.html">Gamified Task Manager</a></li>
       <a href="./fidelity.html">Fidtern</a></li>
       <a href="./greencrew.html">Sustainable Claremont</a></li>
