--- a/index.html
+++ b/index.html
@@ -25,20 +25,25 @@
 
     <div class="main">
 
+      <div class="home-page">
         <!-- Welcome Text -->
-      <div id="main-title"></div>
-      <h1>Vivian's Project Blog</h1>
-      <p>This site documents longer non-academic projects</p>
-      
-      <!-- Status Box -->
-      <div id="status">
-        <p><strong>Currently Blogging:</strong> Gamified Task Manager</p>
+        <div id="main-title">
+          <h1>Vivian's Project Blog</h1>
+          <p>This site is where I detail the process and my personal growth over longer non-academic projects</p>
+        </div>
+        
+        <!-- Status Box -->
+        <div id="status">
+          <p><strong>Currently Blogging:</strong> Gamified Task Manager</p>
+        </div>
+
+        <!-- Link to Website-->
+        <div id="website">
+          <p>For more about me and my projects,
+          <br>visit my website: <a href="http://vivian-pou.com/" target="_blank">vivian-pou.com</a></p>
+        </div>
       </div>
 
-      <!-- Link to Website-->
-      <div id="website">
-        <p>For more about me and my projects, visit my website: <a href="http://vivian-pou.com/" target="_blank">vivian-pou.com</a></p>
-      </div>
     </div>
 
   </body>
