plain entry placeholders

--- a/about.html
+++ b/about.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
 <html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <head>
+    <!-- CSS Style Sheet link -->
+    <link href="./style.css" type="text/css" rel="stylesheet">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no">
+
+    <!-- Title -->
     <title>Vivian's Blog</title>
   </head>
+
+
   <body>
-    <nav>
-        <ul>
-            <li><a href="./index.html">Blog Home</a></li>
-            <li><a href="./gamified.html">Gamified Task Manager</a></li>
-            <li><a href="./fidelity.html">Fidtern</a></li>
-            <li><a href="./greencrew.html">Sustainable Claremont</a></li>
-            <li><a href="./about.html">Blog Details</a></li>
-        </ul>
-    </nav>
+    <!-- Menu Navigation -->
+    <div class="nav">
+        <a href="./index.html">Home</a></li>
+        <div id="current">
+            NEW PROJECT
+        </div>
+        <a href="./gamified.html">Gamified Task Manager</a></li>
+        <a href="./fidelity.html">Fidelity</a></li>
+        <a href="./greencrew.html">Sustainable Claremont</a></li>
+        <a href="./about.html">Blog Info</a>
+        </div>
 
-    <div id="title">
-      <h1>Vivian's Project Blog</h1>
-      <p>UNDER CONSTRUCTION</p>
+    <div class="main">
+        <h1>UNDER CONSTRUCTION</h1>
     </div>
-    
-    <div id="status">
-      <h2><strong>Currently Blogging:</strong> Gamified Task Manager</h2>
-    </div>
-
-    <div id="website">
-      <p>For more about me and my projects, visit my website: <a href="http://vivian-pou.com/" target="_blank">vivian-pou.com</a></p>
-    </div>
-
-    <div id="links">
-        <a href="#title">To top</a>
-    </div>
-        
+  
   </body>
 </html>
