--- a/fidelity.html
+++ b/fidelity.html
@@ -17,10 +17,10 @@
     <!-- Menu Navigation -->
     <div class="nav">
         <a href="./index.html">Home</a></li>
+        <a href="./gamified.html">Gamified Task Manager</a></li>
         <div id="current">
-            <a href="./gamified.html">Gamified Task Manager</a></li>
+            <a href="./fidelity.html">Fidelity</a></li>
         </div>
-        <a href="./fidelity.html">Fidelity</a></li>
         <a href="./greencrew.html">Sustainable Claremont</a></li>
         <a href="./about.html">Blog Info</a>
         </div>
@@ -30,14 +30,14 @@
         <!-- Project Header -->
         <div class="proj-header">
             <div class="proj-title">
-                <h1>Gamified Task Manager</h1>
+                <h1>Fidelity Internship</h1>
             </div>
 
             <div class="proj-status">
                 <p><strong>STATUS: </strong>In-Progress</p>
             </div>
             <div class="proj-dates">
-                <p><strong>Started: May 2020</strong></p>
+                <p><strong>Started: June 2020</strong></p>
             </div>
 
             <!-- shortcuts to top and bottom -->
