--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
     <!-- Menu Navigation -->
     <div class="nav">
       <div id="current">
-        <a href="./index.html">Blog Home</a></li>
+        <a href="./index.html">Home</a></li>
       </div>
       <a href="./gamified.html">Gamified Task Manager</a></li>
-      <a href="./fidelity.html">Fidtern</a></li>
+      <a href="./fidelity.html">Fidelity</a></li>
       <a href="./greencrew.html">Sustainable Claremont</a></li>
+      <a href="./about.html">Blog Info</a>
     </div>
 
     <div class="main">
