about page format

--- a/about.html
+++ b/about.html
@@ -25,8 +25,27 @@
         </div>
     </div>
 
+    <!-- Project Header -->
+    <div class="about-header">
+        <h1>About This Blog</h1>
+    </div>
+
     <div class="main">
-        <h1>UNDER CONSTRUCTION</h1>
+        <div class="about-text">
+            <p>This site was originally started as an experimental first foray into Web Dev.
+                <br>Originally written only using HTML and consisting of only a single page, I wanted to see if I could use the CS skills that I had learned to create my very own website.</p>
+            <p>When I started my first non-academic CS opportunity in the summer of 2019, I though it would be a good idea to keep track of the new skills I was learning and the progression of my research over the summer.
+                <br>Still relying on HTML, the site was transformed into a single page blog as a place to keep track of my thoughts and progress throughout the summer.</p>
+            <p>In May of 2020, I developed a personal website using both HTML and CSS.
+                <br>With these new skills in CSS, I thought it would be appropriate to apply these skills to revamp this blog.
+                <br>I updated the appearance from black-and-white to the color scheme you see now and decided to change the blog from a single page of text a multi-page layout for better readability and navigation.</p>
+        </div>
+
+        <div class="github-link">
+            <p>This site is on Github Pages, which means you can view my repository that contains the code I wrote, which runs this website!</p>
+            <p>View my code here: <a href="https://github.com/vivpou/vivpou.github.io" target="_blank">vivpou/vivpou.github.io</a></p>
+            
+        </div>
     </div>
   
   </body>
