--- a/greencrew.html
+++ b/greencrew.html
@@ -41,9 +41,11 @@
             </div>
 
             <!-- shortcuts to top and bottom -->
-            <div class="proj-shortcut">
-                <p><a href="#June-10-2019-SC">To bottom (oldest entries)</p>
+            <div class="proj-top">
                 <p><a href="#June-11-2019-SC">To top (newest entries)</a></p>
+            </div>
+            <div class="proj-bottom">
+                <p><a href="#June-10-2019-SC">To bottom (oldest entries)</p>
             </div>
         </div>
 
