--- a/gamified.html
+++ b/gamified.html
@@ -41,9 +41,11 @@
             </div>
 
             <!-- shortcuts to top and bottom -->
-            <div class="proj-shortcut">
+            <div class="proj-top">
+                <p><a href="#NEWEST">To top (newest entries)</p>
+            </div>
+            <div class="proj-bottom">
                 <p><a href="#OLDEST">To bottom (oldest entries)</p>
-                <p><a href="#NEWEST">To top (newest entries)</a></p>
             </div>
         </div>
 
