--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!-- Welcome Text -->
         <div id="main-title">
           <h1>Vivian's Project Blog</h1>
-          <p>This site is where I detail the process and my personal growth over longer non-academic projects</p>
+          <p>Follow me as I detail the processes and my own personal growth over longer non-academic projects on this site!</p>
         </div>
         
         <!-- Status Box -->
