moved about header to main

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <!-- Link to Website-->
         <div id="website">
-          <p>For more about me and my projects,
+          <p>For more about me and my projects
           <br>visit my website: <a href="http://vivian-pou.com/" target="_blank">vivian-pou.com</a></p>
         </div>
       </div>
