--- a/about.html
+++ b/about.html
@@ -25,12 +25,13 @@
         </div>
     </div>
 
-    <!-- Project Header -->
-    <div class="about-header">
-        <h1>About This Blog</h1>
-    </div>
-
     <div class="main">
+        <!-- Header -->
+        <div class="about-header">
+            <h1>About This Blog</h1>
+        </div>
+
+        <!-- Main Text -->
         <div class="about-text">
             <p>This site was originally started as an experimental first foray into Web Dev.
                 <br>Originally written only using HTML and consisting of only a single page, I wanted to see if I could use the CS skills that I had learned to create my very own website.</p>
@@ -41,6 +42,7 @@
                 <br>I updated the appearance from black-and-white to the color scheme you see now and decided to change the blog from a single page of text a multi-page layout for better readability and navigation.</p>
         </div>
 
+        <!-- Link to Github Repo -->
         <div class="github-link">
             <p>This site is on Github Pages, which means you can view my repository that contains the code I wrote, which runs this website!</p>
             <p>View my code here: <a href="https://github.com/vivpou/vivpou.github.io" target="_blank">vivpou/vivpou.github.io</a></p>
