about classes to id

--- a/about.html
+++ b/about.html
@@ -27,12 +27,12 @@
 
     <div class="main">
         <!-- Header -->
-        <div class="about-header">
+        <div id="about-header">
             <h1>About This Blog</h1>
         </div>
 
         <!-- Main Text -->
-        <div class="about-text">
+        <div id="about-text">
             <p>This site was originally started as an experimental first foray into Web Dev.
                 <br>Originally written only using HTML and consisting of only a single page, I wanted to see if I could use the CS skills that I had learned to create my very own website.</p>
             <p>When I started my first non-academic CS opportunity in the summer of 2019, I though it would be a good idea to keep track of the new skills I was learning and the progression of my research over the summer.
@@ -43,7 +43,7 @@
         </div>
 
         <!-- Link to Github Repo -->
-        <div class="github-link">
+        <div id="github-link">
             <p>This site is on Github Pages, which means you can view my repository that contains the code I wrote, which runs this website!</p>
             <p>View my code here: <a href="https://github.com/vivpou/vivpou.github.io" target="_blank">vivpou/vivpou.github.io</a></p>
             
