about text to same p

--- a/about.html
+++ b/about.html
@@ -33,13 +33,13 @@
 
         <!-- Main Text -->
         <div id="about-text">
-            <p>This site was originally started as an experimental first foray into Web Dev.
-                <br>Originally written only using HTML and consisting of only a single page, I wanted to see if I could use the CS skills that I had learned to create my very own website.</p>
-            <p>When I started my first non-academic CS opportunity in the summer of 2019, I though it would be a good idea to keep track of the new skills I was learning and the progression of my research over the summer.
-                <br>Still relying on HTML, the site was transformed into a single page blog as a place to keep track of my thoughts and progress throughout the summer.</p>
-            <p>In May of 2020, I developed a personal website using both HTML and CSS.
-                <br>With these new skills in CSS, I thought it would be appropriate to apply these skills to revamp this blog.
-                <br>I updated the appearance from black-and-white to the color scheme you see now and decided to change the blog from a single page of text a multi-page layout for better readability and navigation.</p>
+            <p>This site was originally started as an experimental first foray into Web Dev. 
+                Originally written only using HTML and consisting of only a single page, I wanted to see if I could use the CS skills that I had learned to create my very own website.
+                <br><br>When I started my first non-academic CS opportunity in the summer of 2019, I though it would be a good idea to keep track of the new skills I was learning and the progression of my research over the summer.
+                Still relying on HTML, the site was transformed into a single page blog as a place to keep track of my thoughts and progress throughout the summer.
+                <br><br>In May of 2020, I developed a personal website using both HTML and CSS.
+                With these new skills in CSS, I thought it would be appropriate to apply these skills to revamp this blog.
+                I updated the appearance from black-and-white to the color scheme you see now and decided to change the blog from a single page of text a multi-page layout for better readability and navigation.</p>
         </div>
 
         <!-- Link to Github Repo -->
