--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 
         <!-- Link to Github Repo -->
         <div id="github-link">
-            <p><br><br><br>This site is on Github Pages, which means you can view my repository that contains the code I wrote, which runs this website!
+            <p><br><br>This site is on Github Pages, which means you can view my repository that contains the code I wrote, which runs this website!
             <br>View my code here: <a href="https://github.com/vivpou/vivpou.github.io" target="_blank">vivpou/vivpou.github.io</a></p>
             
         </div>
