format project header

--- a/greencrew.html
+++ b/greencrew.html
@@ -30,7 +30,7 @@
         <!-- Project Header -->
         <div class="proj-header">
             <div class="proj-title">
-                <h1>Sustainable Claremont</h1>
+                <p><strong>Sustainable Claremont</strong></h1>
             </div>
 
             <div class="proj-status">
@@ -41,12 +41,18 @@
             </div>
 
             <!-- shortcuts to top and bottom -->
-            <div class="proj-top">
+            <div class="proj-shortcuts">
+                <span><a href="#June-11-2019-SC">To top (newest entries)</a></span>
+                <span><a href="#June-10-2019-SC">To bottom (oldest entries)</span>
+            </div>
+            <!--
+               <div class="proj-top">
                 <p><a href="#June-11-2019-SC">To top (newest entries)</a></p>
             </div>
             <div class="proj-bottom">
                 <p><a href="#June-10-2019-SC">To bottom (oldest entries)</p>
             </div>
+            --> 
         </div>
 
         <!-- Blog posts -->
