--- a/greencrew.html
+++ b/greencrew.html
@@ -37,7 +37,7 @@
                 <p><strong>STATUS: </strong>Complete</p>
             </div>
             <div class="proj-dates">
-                <p><strong>June 2019-August 2019, March 2019</strong></p>
+                <p><strong>June-August, March 2019</strong></p>
             </div>
 
             <!-- shortcuts to top and bottom -->
@@ -45,14 +45,6 @@
                 <span><a href="#June-11-2019-SC">To top (newest entries)</a></span>
                 <span><a href="#June-10-2019-SC">To bottom (oldest entries)</span>
             </div>
-            <!--
-               <div class="proj-top">
-                <p><a href="#June-11-2019-SC">To top (newest entries)</a></p>
-            </div>
-            <div class="proj-bottom">
-                <p><a href="#June-10-2019-SC">To bottom (oldest entries)</p>
-            </div>
-            --> 
         </div>
 
         <!-- Blog posts -->
