--- a/gamified.html
+++ b/gamified.html
@@ -41,11 +41,9 @@
             </div>
 
             <!-- shortcuts to top and bottom -->
-            <div class="proj-top">
-                <p><a href="#NEWEST">To top (newest entries)</p>
-            </div>
-            <div class="proj-bottom">
-                <p><a href="#OLDEST">To bottom (oldest entries)</p>
+            <div class="proj-shortcuts">
+                <span><a href="#NEWEST">To top (newest entries)</a></span>
+                <span><a href="#OLDEST">To bottom (oldest entries)</span>
             </div>
         </div>
 
