reformat header and main title

--- a/gamified.html
+++ b/gamified.html
@@ -30,7 +30,7 @@
         <!-- Project Header -->
         <div class="proj-header">
             <div class="proj-title">
-                <h1>Gamified Task Manager</h1>
+                <p><strong>Gamified Task Manager</strong></p>>
             </div>
 
             <div class="proj-status">
