--- a/greencrew.html
+++ b/greencrew.html
@@ -30,7 +30,7 @@
         <!-- Project Header -->
         <div class="proj-header">
             <div class="proj-title">
-                <p><strong>Sustainable Claremont</strong></h1>
+                <p><strong>Sustainable Claremont</strong></p>
             </div>
 
             <div class="proj-status">
