attempt link color fix

--- a/fidelity.html
+++ b/fidelity.html
@@ -30,7 +30,7 @@
         <!-- Project Header -->
         <div class="proj-header">
             <div class="proj-title">
-                <p><strong>Gamified Task Manager</strong></p>>
+                <p><strong>Fidelity Internship</strong></p>
             </div>
 
             <div class="proj-status">
