--- a/greencrew.html
+++ b/greencrew.html
@@ -42,8 +42,8 @@
 
             <!-- shortcuts to top and bottom -->
             <div class="proj-shortcuts">
-                <span><a href="#June-11-2019-SC">To top (newest entries)</a></span>
-                <span><a href="#June-10-2019-SC">To bottom (oldest entries)</span>
+                <p><a href="#June-11-2019-SC">To top (newest entries)</a></p>
+                <p><a href="#June-10-2019-SC">To bottom (oldest entries)</p>
             </div>
         </div>
 
