--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <div id="current">
         <a href="./index.html">Home</a></li>
       </div>
-      <a href="./gamified.html">Gamified Task Manager</a></li>
-      <a href="./fidelity.html">Fidelity</a></li>
-      <a href="./greencrew.html">Sustainable Claremont</a></li>
+      <a href="/projects/gamified.html">Gamified Task Manager</a></li>
+      <a href="/projects/fidelity.html">Fidelity</a></li>
+      <a href="/projects/greencrew.html">Sustainable Claremont</a></li>
       <a href="./about.html">Blog Info</a>
     </div>
 
