--- a/projects/gamified.html
+++ b/projects/gamified.html
@@ -4,7 +4,7 @@
 
   <head>
     <!-- CSS Style Sheet link -->
-    <link href="./style.css" type="text/css" rel="stylesheet">
+    <link href="../style.css" type="text/css" rel="stylesheet">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no">
 
@@ -16,13 +16,13 @@
   <body>
     <!-- Menu Navigation -->
     <div class="nav">
-        <a href="./index.html">Home</a></li>
+        <a href="../index.html">Home</a></li>
         <div id="current">
             <a href="./gamified.html">Gamified Task Manager</a></li>
         </div>
         <a href="./fidelity.html">Fidelity</a></li>
         <a href="./greencrew.html">Sustainable Claremont</a></li>
-        <a href="./about.html">Blog Info</a>
+        <a href="../about.html">Blog Info</a>
         </div>
 
     <div class="main">
