--- a/about.html
+++ b/about.html
@@ -17,9 +17,9 @@
     <!-- Menu Navigation -->
     <div class="nav">
         <a href="./index.html">Home</a></li>
-        <a href="./gamified.html">Gamified Task Manager</a></li>
-        <a href="./fidelity.html">Fidelity</a></li>
-        <a href="./greencrew.html">Sustainable Claremont</a></li>
+        <a href="/projects/gamified.html">Gamified Task Manager</a></li>
+        <a href="/projects/fidelity.html">Fidelity</a></li>
+        <a href="/projects/greencrew.html">Sustainable Claremont</a></li>
         <div id="current">
             <a href="./about.html">Blog Info</a>
         </div>
