--- a/projects/greencrew.html
+++ b/projects/greencrew.html
@@ -22,6 +22,7 @@
         <div id="current">
             <a href="../greencrew.html">Sustainable Claremont</a></li>
         </div>
+        <a href="./about.html">Blog Info</a>
         </div>
 
     <div class="main">
