fixed likn again

--- a/projects/greencrew.html
+++ b/projects/greencrew.html
@@ -20,7 +20,7 @@
         <a href="./gamified.html">Gamified Task Manager</a></li>
         <a href="./fidelity.html">Fidelity</a></li>
         <div id="current">
-            <a href="../greencrew.html">Sustainable Claremont</a></li>
+            <a href="./greencrew.html">Sustainable Claremont</a></li>
         </div>
         <a href="../about.html">Blog Info</a>
         </div>
