shortcuts to same line

--- a/projects/fidelity.html
+++ b/projects/fidelity.html
@@ -42,8 +42,8 @@
 
             <!-- shortcuts to top and bottom -->
             <div class="proj-shortcuts">
-                <span><a href="#NEWEST">To top (newest entries)</a></span>
-                <span><a href="#OLDEST">To bottom (oldest entries)</span>
+                <p><a href="#NEWEST">To top (newest entries)</a></p>
+                <p><a href="#OLDEST">To bottom (oldest entries)</a></p>
             </div>
         </div>
 
