--- a/projects/greencrew.html
+++ b/projects/greencrew.html
@@ -43,7 +43,7 @@
             <!-- shortcuts to top and bottom -->
             <div class="proj-shortcuts">
                 <p><a href="#June-11-2019-SC">To top (newest entries)</a></p>
-                <p><a href="#June-10-2019-SC">To bottom (oldest entries)</p>
+                <p><a href="#June-10-2019-SC">To bottom (oldest entries)</a></p>
             </div>
         </div>
 
