--- a/projects/fidelity.html
+++ b/projects/fidelity.html
@@ -30,7 +30,7 @@
         <!-- Project Header -->
         <div class="proj-header">
             <div class="proj-title">
-                <p><strong>Fidelity Internship</strong></p>
+                <h1>Fidelity Internship</h1>
             </div>
 
             <div class="proj-status">
