--- a/projects/gamified.html
+++ b/projects/gamified.html
@@ -30,7 +30,7 @@
         <!-- Project Header -->
         <div class="proj-header">
             <div class="proj-title">
-                <p><strong>Gamified Task Manager</strong></p>
+                <h1>Gamified Task Manager</h1>
             </div>
 
             <div class="proj-status">
