--- a/projects/greencrew.html
+++ b/projects/greencrew.html
@@ -30,7 +30,7 @@
         <!-- Project Header -->
         <div class="proj-header">
             <div class="proj-title">
-                <p><strong>Sustainable Claremont</strong></p>
+                <h1>Sustainable Claremont</h1>
             </div>
 
             <div class="proj-status">
