--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Sidebar Menu -->
     <div class="wrapper">
       <nav id="sidebar">
-        <ul class="components">
+        <ul class="list-unstyled components">
         <li>
           <div id="current">
               <a href="./index.html">Home</a></li>
@@ -52,7 +52,7 @@
   
               <button type="button" id="sidebarCollapse" class="btn btn-info">
                   <i class="fas fa-align-left"></i>
-                  <span>Toggle Sidebar</span>
+                  <span>View Menu</span>
               </button>
   
           </div>
