--- a/index.html
+++ b/index.html
@@ -9,13 +9,24 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <!-- Custom CSS and JS Style Sheet link -->
+    <!-- Custom CSS tyle Sheet link -->
     <link href="./style.css" type="text/css" rel="stylesheet">
-    <script type="text/JavaScript" src="style2.js"></script>
 
     <!-- Scrollbar Custom CSS-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
 
+    <!--Javascript for Nav bar-->
+    <script>
+      $(document).ready(function () {
+        $("#sidebar").mCustomScrollbar({
+          theme: "minimal"
+        });
+        $('#sidebarCollapse').on('click', function () {
+          $('#sidebar').toggleClass('active');
+        });
+      });
+    </script>
+    
     <!-- Title -->
     <title>Vivian's Blog</title>
   </head>
@@ -25,10 +36,8 @@
     <div class="wrapper">
       <nav id="sidebar">
         <ul class="list-unstyled components">
-        <li>
-          <div id="current">
-              <a href="./index.html">Home</a></li>
-            </div>
+        <li class="active">
+            <a href="./index.html">Home</a></li>
           </li>
           <li>
             <a href="/projects/gamified.html">Gamified Task Manager</a></li>
@@ -47,7 +56,7 @@
 
     <div class="content">
       <!-- Toggle Sidenav -->
-      <nav class="navbar navbar-expand navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
   
               <button type="button" id="sidebarCollapse" class="btn btn-info">
