--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="wrapper">
       <nav id="sidebar">
         <ul class="list-unstyled components">
-        <li class="active">
+        <li class="current">
             <a href="./index.html">Home</a></li>
           </li>
           <li>
