--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <head>
     <!-- Required meta tags -->
@@ -33,8 +32,36 @@
 
   <body>
     <!-- Sidebar Menu -->
-    <div class="wrapper">
+    <div class="wrapper d-flex align items-stretch">
       <nav id="sidebar">
+        <div class="custom-menu">
+          <button type="button" id="sidebarCollapse" class="btn btn-primary">
+            <i class="fa fa-bars">
+              ::before
+            </i>
+            <span class="sr-only">Toggle Menu</span>
+          </button>
+        </div>
+        <div class="p-4 pt-5">
+          <h1>Project Blog</h1>
+          <ul class="list-unstyled components mb-5">
+            <li class="active">
+              <a href="./index.html">Home</a></li>
+            </li>
+            <li>
+              <a href="/projects/gamified.html">Gamified Task Manager</a></li>
+            </li>
+            <li>
+              <a href="/projects/fidelity.html">Fidelity</a></li>
+            </li>
+            <li>
+              <a href="/projects/greencrew.html">Sustainable Claremont</a></li>
+            </li>
+            <li>
+              <a href="./about.html">Blog Info</a>
+            </li>
+          </ul>
+        </div>
         <ul class="list-unstyled components">
         <li class="current">
             <a href="./index.html">Home</a></li>
@@ -52,19 +79,6 @@
             <a href="./about.html">Blog Info</a>
           </li>
         </ul>
-      </nav>
-
-    <div class="content">
-      <!-- Toggle Sidenav -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container-fluid">
-  
-              <button type="button" id="sidebarCollapse" class="btn btn-info">
-                  <i class="fas fa-align-left"></i>
-                  <span>View Menu</span>
-              </button>
-  
-          </div>
       </nav>
 
       <!-- Main Page Text -->
