--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <head>
     <!-- Required meta tags -->
@@ -11,75 +12,22 @@
     <!-- Custom CSS tyle Sheet link -->
     <link href="./style.css" type="text/css" rel="stylesheet">
 
-    <!-- Scrollbar Custom CSS-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
-
-    <!--Javascript for Nav bar-->
-    <script>
-      $(document).ready(function () {
-        $("#sidebar").mCustomScrollbar({
-          theme: "minimal"
-        });
-        $('#sidebarCollapse').on('click', function () {
-          $('#sidebar').toggleClass('active');
-        });
-      });
-    </script>
-    
     <!-- Title -->
     <title>Vivian's Blog</title>
   </head>
 
   <body>
-    <!-- Sidebar Menu -->
-    <div class="wrapper d-flex align items-stretch">
-      <nav id="sidebar">
-        <div class="custom-menu">
-          <button type="button" id="sidebarCollapse" class="btn btn-primary">
-            <i class="fa fa-bars">
-              ::before
-            </i>
-            <span class="sr-only">Toggle Menu</span>
-          </button>
-        </div>
-        <div class="p-4 pt-5">
-          <h1>Project Blog</h1>
-          <ul class="list-unstyled components mb-5">
-            <li class="active">
-              <a href="./index.html">Home</a></li>
-            </li>
-            <li>
-              <a href="/projects/gamified.html">Gamified Task Manager</a></li>
-            </li>
-            <li>
-              <a href="/projects/fidelity.html">Fidelity</a></li>
-            </li>
-            <li>
-              <a href="/projects/greencrew.html">Sustainable Claremont</a></li>
-            </li>
-            <li>
-              <a href="./about.html">Blog Info</a>
-            </li>
-          </ul>
-        </div>
-        <ul class="list-unstyled components">
-        <li class="current">
-            <a href="./index.html">Home</a></li>
-          </li>
-          <li>
-            <a href="/projects/gamified.html">Gamified Task Manager</a></li>
-          </li>
-          <li>
-            <a href="/projects/fidelity.html">Fidelity</a></li>
-          </li>
-          <li>
-            <a href="/projects/greencrew.html">Sustainable Claremont</a></li>
-          </li>
-          <li>
-            <a href="./about.html">Blog Info</a>
-          </li>
-        </ul>
-      </nav>
+    <div id="mySidebar" class="sidebar">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <a href="./index.html">Home</a></li>
+      <a href="/projects/gamified.html">Gamified Task Manager</a></li>
+      <a href="/projects/fidelity.html">Fidelity</a></li>
+      <a href="/projects/greencrew.html">Sustainable Claremont</a></li>
+      <a href="./about.html">Blog Info</a>
+    </div>
+
+    <div id="main">
+      <button class="openbtn" onclick="openNav()">&#9776; Open Sidebar</button>
 
       <!-- Main Page Text -->
       <div class="home-page">
@@ -100,21 +48,25 @@
           <br>visit my website: <a href="http://vivian-pou.com/" target="_blank">vivian-pou.com</a></p>
         </div>
       </div>
-
     </div>
+
+    <!-- JavaScript for Navigation Bar-->
+    <script>
+      function openNav() {
+        document.getElementById("mySidebar").style.width = "250px";
+        document.getElementById("main").style.marginLeft = "250px";
+      }
+      
+      function closeNav() {
+        document.getElementById("mySidebar").style.width = "0";
+        document.getElementById("main").style.marginLeft= "0";
+      }
+    </script>
 
     <!-- Optional JavaScript for Bootstrap -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 
-     <!-- jQuery CDN - Slim version (=without AJAX) -->
-     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-     <!-- Popper.JS -->
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-     <!-- Bootstrap JS -->
-     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-     <!-- jQuery Custom Scroller CDN -->
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
   </body>
 </html>
