--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <div id="mySidebar" class="sidebar">
+    <div class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="./index.html">Home</a></li>
       <a href="/projects/gamified.html">Gamified Task Manager</a></li>
