--- a/projects/fidelity.html
+++ b/projects/fidelity.html
@@ -1,60 +1,78 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <head>
-    <!-- CSS Style Sheet link -->
-    <link href="../style.css" type="text/css" rel="stylesheet">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+    <!-- Custom CSS tyle Sheet link -->
+    <link href="../style.css" type="text/css" rel="stylesheet">
 
     <!-- Title -->
     <title>Vivian's Blog</title>
   </head>
 
-
   <body>
-    <!-- Menu Navigation -->
-    <div class="nav">
-        <a href="../index.html">Home</a></li>
-        <a href="./gamified.html">Gamified Task Manager</a></li>
-        <div id="current">
-            <a href="./fidelity.html">Fidelity</a></li>
-        </div>
-        <a href="./greencrew.html">Sustainable Claremont</a></li>
-        <a href="../about.html">Blog Info</a>
-        </div>
-
-    <div class="main">
-
-        <!-- Project Header -->
-        <div class="proj-header">
-            <div class="proj-title">
-                <h1>Fidelity Internship</h1>
-            </div>
-
-            <div class="proj-status">
-                <p><strong>STATUS: </strong>In-Progress</p>
-            </div>
-            <div class="proj-dates">
-                <p><strong>Started: June 2020</strong></p>
-            </div>
-
-            <!-- shortcuts to top and bottom -->
-            <div class="proj-shortcuts">
-                <p><a href="#NEWEST">To top (newest entries)</a></p>
-                <p><a href="#OLDEST">To bottom (oldest entries)</a></p>
-            </div>
-        </div>
-
-        <!-- Blog posts -->
-        <div class="posts">
-            <div id= "MON-DAY-YEAR-PROJ">
-                ENTRY
-            </div>
-        </div>
-
+    <div id="mySidebar" class="sidebar">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <a href="../index.html">Home</a></li>
+      <a href="./gamified.html">Gamified Task Manager</a></li>
+      <a href="./fidelity.html">Fidelity</a></li>
+      <a href="./projects/greencrew.html">Sustainable Claremont</a></li>
+      <a href="../about.html">Blog Info</a>
     </div>
-  
+
+    <div id="main">
+      <button class="openbtn" onclick="openNav()">&#9776; Open Sidebar</button>
+      
+      <!-- Project Header -->
+      <div class="proj-header">
+        <div class="proj-title">
+            <h1>Fidelity Internship</h1>
+        </div>
+
+        <div class="proj-status">
+            <p><strong>STATUS: </strong>In-Progress</p>
+        </div>
+        <div class="proj-dates">
+            <p><strong>Started: June 2020</strong></p>
+        </div>
+
+        <!-- shortcuts to top and bottom -->
+        <div class="proj-shortcuts">
+            <p><a href="#NEWEST">To top (newest entries)</a></p>
+            <p><a href="#OLDEST">To bottom (oldest entries)</a></p>
+        </div>
+    </div>
+
+    <!-- Blog posts -->
+    <div class="posts">
+        <div id= "MON-DAY-YEAR-PROJ">
+            ENTRY
+        </div>
+    </div>
+
+    <!-- JavaScript for Navigation Bar-->
+    <script>
+      function openNav() {
+        document.getElementById("mySidebar").style.width = "250px";
+        document.getElementById("main").style.marginLeft = "250px";
+      }
+      
+      function closeNav() {
+        document.getElementById("mySidebar").style.width = "0";
+        document.getElementById("main").style.marginLeft= "0";
+      }
+    </script>
+
+    <!-- Optional JavaScript for Bootstrap -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS-->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+
   </body>
 </html>
